--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/lumos.css" rel="stylesheet">
+    <link href="css/carousel.css" rel="stylesheet">
+    <link href="css/sticky-footer.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600' rel='stylesheet' type='text/css'>
+
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -16,17 +21,137 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
-  <body>
+</head>
+<body>
+	<div id="masthead">
+		<!--TODO Menu Bar -->
+		<nav class="navbar navbar-inverse">
+		  <div class="container-fluid">
+		    <div class="navbar-header">
+		      <a class="navbar-brand" href="#">
+		        <img alt="Lumos" src="">
+		      </a>
+		    </div>
+		    <ul class="nav navbar-nav">
+		    	<li><a href="#">Blog</a></li>
+		    </ul>
+		  </div>
+		</nav>
+		<div class="container" id="transparent-main">
+			<h1>Welcome!</h1>
+			<h3>We are Lumos, and we have created a naturally caffeinated energy strip</h3>
+		</div>
 
-<!--TODO Menu Bar -->
+	</div>
 
-<!--TODO Logo & Photo box -->
+<!-- About product -->
 
-<!--TODO About product -->
+	<div class="container" id="about-container">
+		<!--
+		<div class="row">
+			<div class="col-md-12" id="about-heading">
+				<h1>About</h1>
+			</div>
+		</div>
+		<br>
+		-->
+		<br>
+		<div class="row" id="about-info">
+			<div class="col-md-4">
+				<img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+				<h2>Natural</h2>
+				<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+			</div>
+			<div class="col-md-4">
+				<img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+				<h2>Healthy</h2>
+				<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+			</div>
+			<div class="col-md-4">
+				<img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+				<h2>Effective</h2>
+				<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+			</div>
+		</div>
+	</div>
+
+	<div class="container">
+		<hr class="featurette-divider">
+		<div class="row featurette">
+			<div class="col-md-7">
+				<h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
+				<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque 	nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+			</div>
+			<div class="col-md-5">
+				<img class="featurette-image img-responsive center-block" src="img/wildberry.png" alt="Generic placeholder image" height="75%" width="75%">
+			</div>
+  		</div
+>  		<hr class="featurette-divider">
+
+		<div class="row featurette">
+			<div class="col-md-7 col-md-push-5">
+		  		<h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
+		  		<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+			</div>
+		<div class="col-md-5 col-md-pull-7">
+		  	<img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+		</div>
+</div>
+
+    </div>	
+<!--TODO Email Form -->
+<br>
+<br>
 
 <!--TODO About team -->
+<div id="team-wrapper">
+	<div class="container" id="team-container">
+		<div class="row">
+			<div class="col-md-12">
+				<h1>The Team</h1>
+			</div>
+		</div>
+		<hr class="featurette-divider" id="team-featurette">
+		<div class="row">
+			<div class="col-md-4">
+				<img class="img-circle" src="img/lexi.jpg" alt="Generic placeholder image" width="140" height="140">
+				<h2>Lexi Kaplin</h2>
+				<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+			</div>
+			<div class="col-md-4">
+				<img class="img-circle" src="img/peter.jpg" alt="Generic placeholder image" width="140" height="140">
+				<h2>Peter Lyons</h2>
+				<h5 class="muted" style="small">Co-Founder</h5>
+				<p>Peter Lyons is a 4th year computer engineering student at Queen's University. </p>
+			</div>
+			<div class="col-md-4">
+				<img class="img-circle" src="img/heather.jpg" alt="Generic placeholder image" width="140" height="140">
+				<h2>Heather Wilcocks-Gynn</h2>
+				<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+			</div>
+		</div>
+		<br>
+		<div class="row">
+			<div class="col-md-2"></div>
+			<div class="col-md-4">
+				<img class="img-circle" src="img/toby.jpg" alt="Generic placeholder image" width="140" height="140">
+				<h2>Tobias Macfarlane</h2>
+				<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+			</div>
+			<div class="col-md-4">
+				<img class="img-circle" src="img/chris.jpg" alt="Generic placeholder image" width="140" height="140">
+				<h2>Chris Angelatos</h2>
+				<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+			</div>
+			<div class="col-md-2"></div>
+		</div>
+	</div>
+</div>
 
+<footer class="footer">
+    <p class="pull-right"><a href="#">Back to top</a></p>
+    <p>&copy; 2015 Lumos &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+</footer>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
