First Push of new site folder location

--- a/backup.html
+++ b/backup.html
@@ -31,6 +31,7 @@
     <![endif]-->
 </head>
 <body>
+    <?php include_once("analyticstracking.php") ?>
 	<div id="masthead" >
 		<!--TODO Menu Bar -->
 		<nav class="navbar">
@@ -85,7 +86,7 @@
 			<div class="col-md-3">
 				<img src="img/plus_icon.png" alt="Generic placeholder image" width="140" height="140">
 				<h2>Effective</h2>
-				<p>Fast acting is our middle name.Thanks to the dissolving absorption,Lumos hits you twice as fast.</p>
+				<p>Fast acting is our middle name. Thanks to the dissolving absorption, Lumos hits you twice as fast.</p>
 			</div>
 		</div>
 	</div>
@@ -108,8 +109,7 @@ punch far above their weight class in caffeine, and in flavour.</p>
 		<div class="row featurette">
 			<div class="col-md-7 col-md-push-5">
 		  		<h2 class="featurette-heading">The three G's of <span class="text-muted">natural caffeine.</span></h2>
-		  		<p class="lead">A blend of green coffee extract, guarana, and green tea extract, come together to deliver
-the energy boost you’ve been waiting for.</p>
+		  		<p class="lead">A blend of green coffee extract, guarana, and green tea extract come together to deliver the energy boost you’ve been waiting for.</p>
 			</div>
             <div class="col-md-5 col-md-pull-7">
 		  	   <img class="featurette-image img-responsive center-block" src="img/extract_icon.png" alt="Generic placeholder image">
